# multimodal-gen-ai-final-project

./: .gitmodules  README.md  config.sh  pyproject.toml
src/: main.ipynb  setup.py
src/SSV2A/: infer_i2a.py
src/SSV2A/ssv2a/data/: detect.py
src/SSV2A/ssv2a/model/: pipeline.py
