[project]
name = "multimodal-ai-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "audioldm>=0.1.1",
    "audioldm2>=0.1.0",
    "clip",
    "dalle2-pytorch>=1.15.6",
    "frechet-audio-distance>=0.3.4",
    "gdown>=5.2.1",
    "kneed>=0.8.5",
    "laion-clap>=1.1.7",
    "librosa>=0.9.2",
    "numpy>=1.23.5",
    "scikit-video>=1.1.11",
    "setuptools<=68",
    "textblob>=0.19.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.14",
    "wandb>=0.25.0",
    "wav2clip>=0.1.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
